# spets

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  test_lang.file  update_metaparser.sh
include/parsegen/: grammar_parser.hpp  metaparser.hpp  rule.hpp
include/parser/: node.hpp  parser.hpp  parsing_helpers.hpp
include/tokenizer/: lexer.hpp
parsegen/: CMakeLists.txt  generated_parser.cpp  grammar_parser.cpp  grammar_parser.hpp  lexer.cpp  lexer.hpp  node.hpp  parsegen.cpp  parser.cpp  parser.hpp  peg_parser.cpp  peg_parser.hpp  pgen_guido.cpp  pgen_old.cpp  pgen_old_2.cpp  rule.hpp  test_grammar.peg
parser/: CMakeLists.txt
spets/: .gitignore  CMakeLists.txt  spetsc.cpp
spets/parsegen/: CMakeLists.txt  generated_parser.cpp  grammar_parser.cpp  metagrammar.peg  metaparser.cpp  metaparser_generator.cpp  metaparser_runner.cpp  pgen_guido.cpp  rule.cpp  test_grammar.peg  token_inspector.cpp
spets/parser/: CMakeLists.txt  parser.cpp  parsing_helpers.cpp
spets/tokenizer/: lexer.cpp
tokenizer/: CMakeLists.txt  lexer.cpp
